kubernetes/rethinkdb-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb
spec:
  replicas: 1
  # Must match RETHINKDB-CLUSTER env and service name.
  serviceName: rethinkdb
  template:
    metadata:
      labels:
        db: rethinkdb
        role: replica
    spec:
      containers:
      - image: rosskukulinski/rethinkdb-kubernetes:2.3.5
        args:
          - "--cache-size"
          - "100"
        imagePullPolicy: Always
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /data
          name: data
        readinessProbe:
          exec:
            command:
            - /probe
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
              - /probe
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
