kubernetes/crypticle-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypticle-worker
spec:
  type: NodePort
  ports:
    -
      port: 8000
      targetPort: 8000
  selector:
    component: crypticle-worker
