kubernetes/rethinkdb-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-admin
spec:
  type: ClusterIP
  ports:
   - port: 8080
     targetPort: admin
  selector:
    db: rethinkdb
    role: admin
