kubernetes/rethinkdb-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-proxy
spec:
  type: ClusterIP
  ports:
    - port: 28015
      targetPort: driver
  selector:
    db: rethinkdb
    role: proxy
