kubernetes/rethinkdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb
spec:
  clusterIP: None
  ports:
  - port: 29015
  selector:
    db: rethinkdb
    role: replica
